Hard for fix more things optimize performance make it closer to stable version