@@ -91,6 +91,11 @@
                     <threadCount>1</threadCount>
                     <reuseForks>false</reuseForks>
                     <runOrder>alphabetical</runOrder>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.math=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
